# gridflow-front-end

./: .gitattributes  .gitignore  .htmlhintrc  BUILD-DIFFS.md  CLAUDE.md  CONTEXT.md  LICENSE  README.md  pyproject.toml
.github/workflows/: deploy.yml
.planning/: AUTONOMOUS-V1-BRIEF.md  CONTROL.md  MILESTONE-COMPLETE-v2.md  MILESTONE-COMPLETE.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  V2-PHASE-7-HANDOFF.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/handovers/: 2026-05-20-gridflow-bugs-from-08C.md  2026-05-20-phase-8d-landing-pages.md  2026-05-27-phase-9-claude-design-handover.md  2026-06-05-phase-10-claude-design-handover.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md  quant-vault-gridflow-implementation-cross-reference.md  vendor-docs-vault-gap-analysis.md
authored-pages/elexon/: _landing.html  agpt.html  agws.html  atl.html  bmunits_reference.html  boal.html  disbsad.html  fou2t14d.html  freq.html  fuelhh.html  fuelinst.html  imbalngc.html  inddem.html  indgen.html  indo.html  indod.html  itsdo.html  lolpdrm.html  market_depth.html  melngc.html  mid.html  ndf.html  ndfd.html  netbsad.html  nonbm.html  pn.html  remit.html  soso.html  system_prices.html  temp.html  tsdf.html  tsdfd.html  uou2t14d.html  windfor.html
authored-pages/entsoe/: _landing.html  activated_balancing_prices.html  activated_balancing_qty.html  actual_generation.html  actual_generation_units.html  actual_load.html  aggregated_balancing_energy_bids.html  auction_revenue.html  balancing_energy_bids.html  balancing_financial_expenses_income.html  commercial_schedules.html  commercial_schedules_net_positions.html  congestion_income.html  congestion_management_costs.html  contracted_reserves.html  countertrading.html  cross_border_flows.html  cross_zonal_balancing_capacity.html  current_balancing_state.html  day_ahead_prices.html  (+30 more)
templates/: dataset-coming-soon.html.j2  dataset.html.j2  vendor-coming-soon.html.j2  vendor-hub.html.j2
(+697 files in other folders)
