[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gridflow-front-end"
version = "0.1.0"
description = "Local dev server for the Gridflow static site"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
# Build-time templating; not required for `gridflow-serve` runtime.
build = ["Jinja2>=3.1,<4"]

[project.scripts]
gridflow-serve = "gridflow_front_end.serve:main"
gridflow-build = "gridflow_front_end.build:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["py.typed"]
